Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <img src="https://assets.nintendo.com/image/upload/q_auto:best/f_auto/dpr_2.0/ncom/software/switch/70010000000153/de697f487a36d802dd9a5ff0341f717c8486221f2f1219b675af37aca63bc453" alt="mario kart 8">
         
                         <h3>7. Red Dead Redemption II</h3>
-                        <p><span class="vendas">Vendas:</span>: 67 milhões</p>
+                        <p><span class="vendas">Vendas:</span>67 milhões</p>
                         <p>Lançado em 2018, Red Dead Redemption II é um épico de mundo aberto da Rockstar, aclamado por sua narrativa e pela riqueza de seu mundo, conquistando uma enorme base de fãs.</p>
 
                         <img src="https://cdn1.epicgames.com/b30b6d1b4dfd4dcc93b5490be5e094e5/offer/RDR2476298253_Epic_Games_Wishlist_RDR2_2560x1440_V01-2560x1440-2a9ebe1f7ee202102555be202d5632ec.jpg" alt="red dead 2">
